--- a/assets/scss/components/_events.scss
+++ b/assets/scss/components/_events.scss
@@ -32,9 +32,9 @@
                 gap:30px;
                 margin-bottom: 30px;
                 .card{
-                    width:360px;
+                    max-width:360px;
                     .card-image{
-                        width:360px;
+                        max-width:360px;
                         overflow: hidden;
                         img{
                             width: 100%;
@@ -46,7 +46,7 @@
                         }
                     }
                     .card-info{
-                        width:360px;
+                        max-width:360px;
                         border-radius: 0px 0px 5px 5px;
                         padding: 30px 20px 30px 23px;
                         box-shadow: 0 10px 15px rgba(0,9,94,0.06);
@@ -106,19 +106,36 @@
         }
     }
 }
-
-// @media (max-width:320px){
-//     .events{
-//         width: 100%;
-//         .container{
-//             width: 100%;
-//         }
-//     }
-    
-//     .card:nth-child(2){
-//         display:none;
-//     }
-//     .card:nth-child(3){
-//         display:none;
-//     }
-// }
+@media (max-width:768px){
+    .events{
+        width: 100%;
+        .container{
+            width: 100%;
+            .slider-cards{
+                flex-direction: column;
+            }
+        }
+    }
+    .card:nth-child(3){
+        display:none;
+    }
+}
+@media (max-width:500px){
+    .events{
+        padding: 0 15px !important;
+        width: 100%;
+        .container{
+            .events-header{
+                h2{
+                    font-size:25px !important;
+                }
+            }
+        }
+    }
+    .card:nth-child(2){
+        display:none;
+    }
+    .card:nth-child(3){
+        display:none;
+    }
+}
