--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -8,7 +8,7 @@
 }
 
 .container{
-    width: min(90%,1200px);
+    max-width: 1200px;
     margin:0 auto;
-    border:1px solid red;
+    padding: 0 15px;
 }
