--- a/assets/scss/components/_instagram.scss
+++ b/assets/scss/components/_instagram.scss
@@ -7,7 +7,6 @@
             position: relative;
             img{
                 width:100%;
-                height: auto;
                 display: block;
                 opacity: 1;
                 transition: .5s ease-in-out;
@@ -32,6 +31,26 @@
                 .insta-hover{
                     opacity: 1;
                 }
+            }
+        }
+    }
+}
+@media (max-width: 500px) {
+    .instagram .row {
+        margin-top: 0 !important;
+        grid-template-columns: auto;
+        align-items: center;
+        width:100%;
+        justify-content: center;
+    }
+    .instagram{
+        width: 100%;
+        align-items: center;
+        .col-items{
+            width: 300px;
+            img{
+                width: 100%;
+                height:200px;
             }
         }
     }
