--- a/assets/scss/components/_video.scss
+++ b/assets/scss/components/_video.scss
@@ -35,3 +35,25 @@
         }
     }
 }
+
+@media (max-width:500px){
+    .video{
+        padding: 0 15px !important;
+        .container{
+            .row{
+                height: 350px;
+                .video-play{
+                    h3{
+                        font-size:25px !important;
+                    }
+                }
+            }
+            
+        }
+    }
+}
+@media (max-width:768px){
+    .video{
+        padding: 0 15px !important;
+    }
+}
